# multiple_object_tracking_in_RGB-D_camera_network

./: README.md  read_me_zhao
add_to_iai_kinect2_package/iai_kinect2/kinect2_bridge/launch/: kinect2_bridge_rosbag.launch  kinect2_bridge_rosbag_point_cloud.launch
detection/: CMakeLists.txt
detection/apps/: main_dskcf.cpp  multiple_objects_detection_3dms_node.cpp  multiple_objects_detection_asms_node.cpp  multiple_objects_detection_dat_node.cpp  multiple_objects_detection_kfebt_node.cpp
detection/cfg/: multiple_objects_detection.cfg
detection/conf/: multiple_objects_detection.yaml
detection/include/open_ptrack/3dms/: multiple_objects_detection.h  object_detector.h
detection/include/open_ptrack/asms/: colotracker.h  multiple_objects_detection_asms.h
detection/include/open_ptrack/dat/: dat_tracker.hpp  multiple_objects_detection_dat.h
detection/include/open_ptrack/kfebt/: kfebtracker.h  multiple_objects_detection_kfebt.h
detection/include/open_ptrack/kfebt/trackers/: btracker.h  tasms.cpp  tasms.h  tkcf.h
detection/include/open_ptrack/kfebt/trackers/ASMS/: CMakeLists.txt  CMakeLists.txt~  colotracker_.cpp  colotracker_.h  histogram_.cpp  histogram_.h  region_.cpp  region_.h
detection/include/open_ptrack/kfebt/trackers/CBT/consensus/: coloravaliation.h
detection/include/open_ptrack/people/: detection.h  ground_based_people_detection_app.h  ground_segmentation.h  person_classifier.h  skeleton_detection.h
detection/include/open_ptrack/people/impl/: ground_based_people_detection_app.hpp  ground_segmentation.hpp  person_classifier.hpp
detection/launch/: object_detector.launch  object_detector_kinect2_bag.launch  object_detector_kinect2_bag_point_cloud.launch
detection/src/3dms/: object_detector.cpp
detection/src/asms/: colotracker.cpp  histogram.cpp  region.cpp
detection/src/dat/: dat_tracker.cpp
detection/src/kfebt/: kfebt.cpp  kfebtracker.cpp
detection/src/people/: detection.cpp  detection_source.cpp  haardispada.cpp
opt_calibration/apps/: opt_calibration_refinement.cpp
opt_calibration/conf/: camera_network.yaml
opt_calibration/launch/: opt_calibration_master.launch  opt_define_reference_frame.launch
opt_gui/src/component/: opt_streaming_component.cpp
opt_msgs/: CMakeLists.txt
opt_msgs/msg/: Track3D.msg  groundTruth.msg  groundTruthArray.msg
opt_utils/launch/: ros2udp_converter.launch~
tracking/: CMakeLists.txt
tracking/apps/: moving_average_filter_3d_node.cpp  skeleton_tracker_node.cpp  tracker_node.cpp  tracker_object_with_robot_GT_node.cpp
tracking/conf/: multicamera_tracking.rviz  object_tracker_multicamera.yaml
tracking/include/open_ptrack/tracking/: skeleton_track.h  skeleton_tracker.h  track.h  track3d.h  track_object.h  tracker.h  tracker3d.h  tracker_object.h
tracking/launch/: object_tracker_network.launch  object_tracking_node.launch  object_tracking_node_rosbag_without_visualization.launch
tracking/launch/record_tracks/: record_tracks_feedback.launch  record_tracks_feedback_and_all_detections.launch
tracking/src/: track_object.cpp  tracker_object.cpp
